Removed okhhtp3 dependencies and used StandardCharsets